Assignments on Pytgon Basics

--- a/Basics/Fundamentals.ipynb
+++ b/Basics/Fundamentals.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        " 'yield']"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q8. What are different built-in datatypes?\n",
+    "### Q10. What are different built-in datatypes?\n",
     "#### Ans: 1. Boolean Datatype: TRUE, FALSE\n",
     "#### 2. Numeric Datatype: Int, float, complex numbers\n",
     "#### 3. Sequences Datatype: Str, List, tuple, dict, sets, bytes, bytearray\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
        "''"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,7 @@
        "0"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
        "0j"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
        "0.1"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +738,7 @@
        "True"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
        "(2+3j)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
        "0.98"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +806,7 @@
        "0"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +826,7 @@
        "False"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +846,7 @@
        "''"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
        "0"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
        "0j"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +924,7 @@
        "0"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +944,7 @@
        "False"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +972,7 @@
        "'PIYUSH'"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +992,7 @@
        "' '"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1012,7 @@
        "23.5"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1026,12 +1026,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 1. If one of the operands are True Values then the output will be True operand of the expression."
+    "##### 3. If one of the operands are True Values then the output will be True operand of the expression."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1040,7 @@
        "23"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1060,7 @@
        "'p'"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1080,7 @@
        "'True'"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1109,7 @@
        "False"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1129,7 @@
        "False"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1149,7 @@
        "True"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1169,7 @@
        "False"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1293,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1307,6 +1307,273 @@
    "source": [
     "# >> operator\n",
     "print(5 >> 2)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6. Assignment Operators:- is assigning literal or expression on its right, to variable to its left.\n",
+    "#### These are categorised into two types:\n",
+    "##### a. Simple assignment operators: [=]\n",
+    "##### b. Advanced assignment operators: [ +=, -=, /=, //=, *=, **=, %=, &=, |=, ^=, >>=, <<= ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Simple assignment operator\n",
+    "one = 1\n",
+    "print(one)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Advanced assignment operator\n",
+    "one += 1 # one = one + 1\n",
+    "one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "one -= 1\n",
+    "one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "one = 20\n",
+    "one /= 4\n",
+    "one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "one //= 2\n",
+    "one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2.0*2 = 4.0\n",
+    "one *= 2\n",
+    "one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4.0 ** 2 = 16.0\n",
+    "one **= 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16.0"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 16 % 5 = 1\n",
+    "one %= 5\n",
+    "one"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Special operators:\n",
+    "##### There are two types of special operators\n",
+    "##### 1. Identity operators: [is, is not]\n",
+    "#####   a. is: is will return True if both operands are pointing to some object.\n",
+    "#####   b. is not: is not will return True if both operands are not same internally.\n",
+    "##### 2. Membership operators: [in, not in], checks whether the sub-sequence is present in the given sequence [list, tuple, str, bytes, bytearray]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# is , is not\n",
+    "a = \"Piyush\"\n",
+    "b = \"Raj\"\n",
+    "print(a is b) # False\n",
+    "print(a is not b) # True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'i' in a # P'i'yush checks if 'i' is present in string\n",
+    "2 in [1,2,3,4,5,6] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'m' not in b # checks if m is not present in string b\n",
+    "4 not in [7,8,9,0,67] # checks if 4 is not present in [7,8,9,0,67]"
    ]
   }
  ],
