--- a/Python Basics Tutorial/Day7.ipynb
+++ b/Python Basics Tutorial/Day7.ipynb
@@ -24,20 +24,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number out of range.\n"
+      "Number: 5\n",
+      "Five\n"
      ]
     }
    ],
    "source": [
     "# 2) WAP TO CONVERT DIGITS FROM 0-9 ONLY INTO WORDS.\n",
     "num = int(input(\"Enter a number: \"))\n",
+    "print(f\"Number: {num}\")\n",
     "if num == 0:\n",
     "    print(\"Zero\")\n",
     "elif num == 1:\n",
